# ML-Microclimate-Analysis

./: .buildinfo  Dataset.md  README.md  config.yaml  configurations.html  dataset.html  genindex.html  index.html  installation.html  makefile  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tst.py  usage.html
.github/workflows/: auto_docs.yml  python_test.yml
_modules/: index.html  utils.html
_modules/core/: errors.html
_modules/data/: data_module.html  dataset.html  loader.html  transform.html
_modules/model/: lightning_model.html
_modules/ucs/: utils.html
_modules/ucs/core/: errors.html
_modules/ucs/data/: data_module.html  dataset.html  transform.html
_modules/ucs/model/: lightning_model.html
_modules/ucs/utils/: callbacks.html  config.html  metrics.html
_modules/utils/: callbacks.html  config.html  metrics.html  save_pretrained_callback.html
_sources/: configurations.rst.txt  dataset.md.txt  index.rst.txt  installation.md.txt  modules.rst.txt  usage.md.txt
_sources/api/: model.rst.txt  modules.rst.txt
_sources/api/core/: errors.rst.txt
_sources/api/utils/: callbacks.rst.txt  top_level.rst.txt
_sources/data/: data.dataset.rst.txt  data.rst.txt
_sources/utils/: utils.save_pretrained_callback.rst.txt
_static/: copybutton.js
api/: core.html  data.html  model.html  modules.html  utils.html
api/core/: errors.html
api/data/: data_module.html  dataset.html  transform.html
api/model/: lightning_model.html
api/utils/: callbacks.html  config.html  metrics.html  top_level.html
core/: core.errors.html  core.html  modules.html
data/: data.dataset.html  data.html  data.loader.html  data.transform.html  modules.html
docs/source/: conf.py  configurations.md  dataset.md  index.rst  installation.md
docs/source/_static/: custom.css
docs/source/api/: core.rst  data.rst  utils.rst
docs/source/api/core/: errors.rst
docs/source/api/data/: data_module.rst  dataset.rst  loader.rst  transform.rst
docs/source/api/model/: lightning_model.rst
docs/source/api/utils/: callbacks.rst  config.rst  metrics.rst  top_level.rst
docs/source/core/: core.rst
docs/source/data/: data.loader.rst  data.rst  data.transform.rst
docs/source/model/: model.lightning_model.rst  model.rst
docs/source/utils/: utils.config.rst  utils.metrics.rst  utils.rst
ml_microclimate/: DataHandler.py  SegformerFinetuner.py  SemanticSegmentationDataset.py  TrainingHandler.py  utils.py
model/: model.html  model.lightning_model.html  modules.html
notebook/: segFormer-uc.ipynb
scripts/: main.py  requirements.txt
src/: main.py
src/core/: errors.py  eval_parser.py  parser.py  train_parser.py
src/data/: dataset.py  download_data.py  loader.py  transform.py
src/model/: evaluate.py  lightning_model.py  train.py
src/ucs/: main.py
src/ucs/core/: __init__.py
src/ucs/data/: data_module.py  dataset.py  transform.py
src/ucs/model/: evaluate.py  lightning_model.py  train.py
src/ucs/utils/: __init__.py  callbacks.py  config.py  metrics.py
src/utils/: __init__.py  config.py  errors.py  metrics.py  save_pretrained_callback.py
tests/data/: test_dataset.py  test_loader.py
tests/model/: test_evaluate.py  test_lightning_model.py  test_train.py
tests/utils/: test_CeDiceLoss.py  test_callbacks.py  test_config.py  test_metrics.py  test_save_pretrained_callback.py  test_utils.py
ucs/: __init__.py  main.py
ucs/core/: __init__.py  errors.py  eval_parser.py  parser.py  train_parser.py
ucs/data/: data_module.py  dataset.py  loader.py  transform.py
ucs/model/: __init__.py  evaluate.py  lightning_model.py  train.py
ucs/utils/: __init__.py  callbacks.py  config.py  metrics.py
utils/: modules.html  utils.config.html  utils.html  utils.metrics.html  utils.save_pretrained_callback.html
