[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ML-Microclimate-Analysis"
version = "0.1.0"
description = "Machine Learning Microclimate Prediction Project"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "albucore==0.0.21",
    "albumentations==1.4.22",
    "datasets==3.0.0",
    "matplotlib==3.9.2",
    "pytorch-lightning==2.4.0",
    "scikit-learn==1.5.2",
    "torch==2.4.1",
    "torchmetrics==1.4.2",
    "tqdm==4.66.5",
    "transformers==4.44.2",
    "tensorboardX==2.6.2.2",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["data","core","model","utils"]




[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "flake8",
    "pytest",
    "pytest-mock",
    "coverage",
    "pytest-cov",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-copybutton",
]

[project.scripts]
landcover-model = "main:main"
lcm = "main:main"

[tool.coverage.run]
source = ["src"]
omit = ["src/main.py", "src/model/evaluate.py", "src/model/train.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]
addopts = "--cov=src --cov-report=term-missing --cov-report=xml"
