[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ucs"
version = "0.1.0"
description = "Urban Climate Segmentation Model"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Nave Cohen", email = "navecohen81@gmail.com" },
    { name = "Erik Pinhasov", email = "erik944@gmail.com" }
]
keywords = ["urban climate", "segmentation", "deep learning", "image analysis"]
dependencies = [
    "albucore==0.0.21",
    "albumentations==1.4.22",
    "datasets==3.0.0",
    "matplotlib==3.9.2",
    "pytorch-lightning==2.4.0",
    "scikit-learn==1.5.2",
    "torch==2.4.1",
    "torchmetrics==1.4.2",
    "tqdm==4.66.5",
    "transformers==4.44.2",
    "tensorboardX==2.6.2.2",
]


[project.urls]
Homepage = "https://github.com/MMA-org/ML-Microclimate-Analysis"
Documentation = "https://mma-org.github.io/ML-Microclimate-Analysis/" 
[project.scripts]
landcover-model = "main:main"
ucs = "ucs.main:main"


[tool.setuptools]
package-dir = { "" = "ucs" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["ucs"]
include = ["data","core","model","utils"]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "black",
    "flake8",
    "pytest",
    "pytest-mock",
    "coverage",
    "pytest-cov",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme",
    "myst-parser",
    "sphinx-copybutton",
    "furo",
]

[tool.coverage.run]
source = ["ucs"]
omit = ["ucs/main.py", "ucs/model/evaluate.py", "ucs/model/train.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]
addopts = "--cov=ucs --cov-report=term-missing --cov-report=xml"
